fix product img size, business user cant add large img to distort page.

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -10,6 +10,10 @@ body {
     font-family: 'Lato';
 }
 
+#img-added  {
+    height: "600px";} 
+
+
 /* .btn-success {
     background-color:trans;
 } */
